Вместо collect(Collectors.toList()) просто toList()